# my_stack

./: .gitignore  CMakeLists.txt  Readme  Readme.md  main.c  stack  stack.c  stack.h  test.c
include/: stack.h
src/: main.c  stack.c
test/: test.c
